# gattlib

./: .gitignore  .travis.yml  CMakeLists.txt  CrossCompilation.cmake  Package.swift  README.md  gattlib_common.c  requirements.dep  update-dev-tag.sh
.github/workflows/: github-actions.yml
bluez/: CMakeLists.txt  gattlib.pc.in  gattlib_adapter.c  gattlib_connect.c  gattlib_discover.c  gattlib_internal.h  gattlib_read_write.c
bluez/attrib/: gatt.c  gattrib.c  gattrib.h
bluez/bluez4/attrib/: att.c
bluez/bluez4/btio/: btio.h
bluez/bluez4/lib/: sdp.c
bluez/bluez5/attrib/: att.c  gattrib.c  gattrib.h
bluez/bluez5/lib/: libbluetooth-internal.la  sdp.c
bluez/btio/: btio.c  btio.h
bluez/src/: log.c
bluez4/btio/: btio.c
bluez5/attrib/: att.c  gatt.c  gattrib.c
bluez5/btio/: btio.c  btio.h
bluez5/lib/: bluetooth.c
bluez5/src/: log.c
bluez5/src/shared/: io-glib.c  tester.c
ci/: generate-python-mainlinux-package.sh  generate-python-package.sh  install-bluez.sh
common/: gattlib_callback_connected_device.c  gattlib_callback_disconnected_device.c  gattlib_callback_discovered_device.c  gattlib_callback_notification_device.c  gattlib_callback_python.c  gattlib_common.c  gattlib_common_adapter.c  gattlib_device_state_management.c  gattlib_eddystone.c  gattlib_internal.h  gattlib_internal_defs.h
common/logging_backend/printf/: gattlib_logging.c
common/logging_backend/python/: gattlib_logging.c
common/logging_backend/syslog/: gattlib_logging.c
common/mainloop/: gattlib_glib_mainloop.c
dbus/: CMakeLists.txt  gattlib.c  gattlib_adapter.c  gattlib_advertisement.c  gattlib_async.c  gattlib_backend.h  gattlib_char.c  gattlib_internal.h  gattlib_notification.c  gattlib_stream.c
dbus/bluez5/lib/: uuid.c
dbus/dbus-bluez-pre-v5.40/: org.bluez.Adapter1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattService1.xml
dbus/dbus-bluez-v5.40/: org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml
dbus/dbus-bluez-v5.48/: org.bluez.Adapter1.xml  org.bluez.Battery1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml
dbus/interfaces/: org.bluez.GattCharacteristic1.xml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/advertisement_data/: CMakeLists.txt  advertisement_data.c
examples/ble_scan/: CMakeLists.txt  ble_scan.c  ble_scan.py
examples/ble_scan_async/: CMakeLists.txt  ble_scan_async.c
examples/discover/: CMakeLists.txt  discover.c
examples/find_eddystone/: CMakeLists.txt  find_eddystone.c
examples/gatttool/: CMakeLists.txt  gatttool.c  gatttool.h  interactive.c  utils.c
examples/nordic_uart/: CMakeLists.txt  nordic_uart.c
examples/notification/: CMakeLists.txt  notification.c
examples/read_write/: CMakeLists.txt  read_write.c
examples/read_write_memory/: CMakeLists.txt  read_write_memory.c
gattlib-py/: .pylintrc  README.md  TODO.md  setup.py
gattlib-py/examples/advertisement_data/: advertisement_data.py
gattlib-py/examples/ble_scan/: ble_scan.py
gattlib-py/examples/find_eddystone/: find_eddystone.py
gattlib-py/examples/nordic_thingy/: environment_service.py  nordic_thingy.py  sound_service.py
gattlib-py/examples/read_write/: read_write.py
gattlib-py/gattlib/: __init__.py  adapter.py  device.py  exception.py  gatt.py  helpers.py  mainloop.py  uuid.py
include/: gattlib.h  gattlib_internal.h
src/: gattlib_connect.c  gattlib_discover.c  gattlib_read_write.c
swift/Gattlib/: Gattlib.swift
tests/test_continuous_connection/: CMakeLists.txt  test_continuous_connection.c
